--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
-  <link href="https://fonts.cdnfonts.com/css/f25-bank-printer" rel="stylesheet">
+  <!-- <link href="https://fonts.cdnfonts.com/css/f25-bank-printer" rel="stylesheet"> -->
 
   <meta name="theme-color" content="#1976d2">
 </head>
